@@ -21,3 +21,4 @@ $meta['direction'] = array('multichoice','_choices' => array('nocheck','dokuwiki
 $meta['scayt'] = array('multichoice','_choices' => array('on','off'));
 $meta['scayt_auto'] = array('multichoice','_choices' => array('on','off'));
 $meta['scayt_lang'] = array('multichoice','_choices' => array('American English/en_US','Brazilian Portuguese/pt_BR','British English/en_GB','Canadian English/en_CA','Canadian French/fr_CA','Danish/da_DK','Dutch/nl_NL','Finnish/fi_FI','French/fr_FR','German/de_DE','Greek/el_GR','Italian/it_IT', 'Norwegian/nb_NO','Portuguese/pt_PT', 'Spanish/es_ES','Swedish/sv_SE'));
+$meta['smiley_hack'] = array('onoff');
